# xlog

./: .clang-format  CMakeLists.txt  README.md
include/logging/: api.hh
include/logging/detail/: level.hh  logger.hh  my_literals.hh  my_traits.hh  record.hh  sink.hh  time_util.hh
include/xlog/: api.hh
include/xlog/detail/: api_macro.hh  atomic_wrapper.hh  config.hh  level.hh  log_option.hh  logger.hh  my_literals.hh  record.hh  sink.hh  time_util.hh  util.hh
test/: CMakeLists.txt  benchmark.cc  file.cc  main.cc
